# college-baseball

./: .gitignore  README.md  app.py  baseball.db  batting_individual.py  batting_team.py  help.py  helper.py  pitching_individual.py  pitching_metrics_map.json  pitching_team.py  pyproject.toml  requirements.txt
bronze/data/: adv_pitching.csv  std_batting.csv  std_pitching.csv
bronze/load/: load_adv_batting.py  load_adv_pitching.py  load_std_batting.py  load_std_pitching.py
bronze/tables/: bronze_adv_batting.sql  bronze_adv_pitching.sql  bronze_std_batting.sql  bronze_std_pitching.sql  create_bronze_tables.py
pages/: batting_individual.py  batting_team.py  home.py  pitching_individual.py  pitching_team.py
processed/: create_processed_pitching.sql  create_processed_tables.py  pitching_processing.py
raw/: batting.csv  create_raw_pitching.sql  create_raw_tables.py  load_raw_batting.py  load_raw_pitching.py
silver/process/: process_adv_batting.py  process_adv_pitching.py  process_std_batting.py  process_std_pitching.py
silver/tables/: create_silver_tables.py  silver_adv_batting.sql  silver_adv_pitching.sql  silver_std_batting.sql  silver_std_pitching.sql
src/college_baseball/: baseball.db
src/college_baseball/processed/: batting_processing.py  create_processed_batting.sql
src/college_baseball/raw/: create_raw_batting.sql  create_raw_tables.py  load_raw_batting.py
static/: batters.json  batting_metrics.json  batting_metrics_map.json  batting_std_metrics.json  pitchers.json  pitching_metrics.json  pitching_std_metrics.json
(+2 files in other folders)
